# HDDModelDecoder.py

./: .gitignore  .gitlab-ci.yml  Code_Of_Conduct.md  MANIFEST.in  ReadMe.md  pyproject.toml
.ci/: pythonStdlibFixes.sh
HDDModelDecoder/: HGST.py  Samsung.py  Seagate.py  Toshiba.py  WD.py  __init__.py  __main__.py  interfaces.py
HDDModelDecoder/ml/: WDDmatSpec.py  predictWD.py
HDDModelDecoder/ml/WD_models/: bestHyperparams.json
HDDModelDecoder/utils/: __init__.py
dataset/: Samsung.tsv  Seagate.tsv  Toshiba.tsv  WD.tsv  WD_series.json  __init__.py  myTSV.py
learn/: decodeWDModelSeriesModifiers.py  learnWDSeries.py
learn/WD_models/: bestHyperparams.json
tests/: test.py
